--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,5 @@ jobs:
 
     steps:
       - checkout
-      - run: echo "Hello test"
-      - run: ls
-      - run: ls ../
+      - run: echo "creating repo directory, is it visible"
+      - run: mkdir MIND-GENESPARALLELCNV/repo
