--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-   # working_directory: .circleci
+    working_directory: /home/circleci/project/testCodes
 
     steps:
       - checkout
       - run: echo "creating repo directory, is it visible"
-      - run: mkdir MIND-GENESPARALLELCNV/repo
+      - run: mkdir repo
