--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,22 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: /home/circleci/project/testCodes
+    working_directory: /home/circleci/project
 
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+
       - run: echo "creating repo directory, is it visible"
       - run: mkdir repo
